# coding_agent

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
coding_agent/: __init__.py  cli.py  config.py  doctor.py  shell_environment.py
coding_agent/agent/: __init__.py  core.py  history.py  slash_commands.py  state.py
coding_agent/llm/: __init__.py  client.py  runtime.py
coding_agent/mcp/: __init__.py  manager.py
coding_agent/prompts/: system.j2
coding_agent/skills/: __init__.py  manager.py
coding_agent/tools/: __init__.py  code_tools.py  file_tools.py  registry.py  shell_tools.py
coding_agent/utils/: file_diff.py
tests/: test_agent_core.py  test_cli.py  test_config.py  test_doctor.py  test_file_diff.py  test_file_tools.py  test_llm_client.py  test_mcp_manager.py  test_registry.py  test_session_history.py  test_shell_tools.py  test_skills.py  test_slash_commands.py
